force-app/main/default/objects/Name_List__c/Name_List__c.object-meta.xml
<CustomObject>
    <label>Name List</label>
    <nameField>
        <displayFormat>NL{YYYY}{MM}{0000000000}</displayFormat>
        <label>Name List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Name Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>