force-app/main/default/objects/Name_List__c/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_340, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340)) &amp;  Seat_Allocation_and_Ticketing__r.Case_ID__c,  Seat_Allocation_and_Ticketing__r.Case_ID__r.CaseNumber, &quot;_self&quot; )</formula>
    <label>Case ID</label>
    <type>Text</type>
</CustomField>