force-app/main/default/objects/Name_List__c/fields/Child_Age__c.field-meta.xml
<CustomField>
    <fullName>Child_Age__c</fullName>
    <label>Child Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>