force-app/main/default/objects/Name_List__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>X</fullName>
            </value>
            <value>
                <fullName>U</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
                <isActive>false</isActive>
                <label>Female</label>
            </value>
            <value>
                <fullName>Male</fullName>
                <isActive>false</isActive>
                <label>Male</label>
            </value>
            <value>
                <fullName>Undisclosed Gender</fullName>
                <isActive>false</isActive>
                <label>Undisclosed Gender</label>
            </value>
            <value>
                <fullName>Unspecified Gender</fullName>
                <isActive>false</isActive>
                <label>Unspecified Gender</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>