force-app/main/default/objects/Name_List__c/fields/INF_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>INF_Date_of_Birth__c</fullName>
    <label>INF_Date of Birth</label>
    <type>Date</type>
</CustomField>