force-app/main/default/objects/Name_List__c/fields/INF_First_Name__c.field-meta.xml
<CustomField>
    <fullName>INF_First_Name__c</fullName>
    <label>INF_First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>