force-app/main/default/objects/Name_List__c/fields/INF_Issue_Ticket_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>INF_Issue_Ticket_Error_Message__c</fullName>
    <label>INF_Issue Ticket Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>