force-app/main/default/objects/Name_List__c/fields/INF_Meal_Selection_Returning_Only__c.field-meta.xml
<CustomField>
    <fullName>INF_Meal_Selection_Returning_Only__c</fullName>
    <label>INF_Meal Selection(Returning Only)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BBML</fullName>
            </value>
            <value>
                <fullName>BBML,BBML</fullName>
                <isActive>false</isActive>
                <label>BBML,BBML</label>
            </value>
            <value>
                <fullName>N</fullName>
                <isActive>false</isActive>
                <label>N</label>
            </value>
            <value>
                <fullName>Testing</fullName>
                <isActive>false</isActive>
                <label>Testing</label>
            </value>
            <value>
                <fullName>bbml
=bbml</fullName>
                <isActive>false</isActive>
                <label>bbml
=bbml</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>