force-app/main/default/objects/Name_List__c/fields/INF_Meal_Selection_Status_Departing__c.field-meta.xml
<CustomField>
    <fullName>INF_Meal_Selection_Status_Departing__c</fullName>
    <label>INF_Meal Selection Status(Departing)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>