force-app/main/default/objects/Name_List__c/fields/INF_Meal_Selection_Status_Returning__c.field-meta.xml
<CustomField>
    <fullName>INF_Meal_Selection_Status_Returning__c</fullName>
    <label>INF_Meal Selection Status(Returning)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>