force-app/main/default/objects/Name_List__c/fields/INF_Passenger_Type__c.field-meta.xml
<CustomField>
    <fullName>INF_Passenger_Type__c</fullName>
    <label>INF_Passenger Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Passenger_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>infant</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
                <isActive>false</isActive>
                <label>Testing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>