force-app/main/default/objects/Name_List__c/fields/INF_Passport_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>INF_Passport_Expiry_Date__c</fullName>
    <description>嬰兒護照到期日</description>
    <label>INF Passport Expiry Date</label>
    <type>Date</type>
</CustomField>