force-app/main/default/objects/Name_List__c/fields/INF_Passport_Issue_Country__c.field-meta.xml
<CustomField>
    <fullName>INF_Passport_Issue_Country__c</fullName>
    <description>嬰兒護照發照國家三碼</description>
    <label>INF Passport Issue Country</label>
    <length>3</length>
    <type>Text</type>
</CustomField>