force-app/main/default/objects/Name_List__c/fields/INF_Passport_No__c.field-meta.xml
<CustomField>
    <fullName>INF_Passport_No__c</fullName>
    <description>嬰兒護照號碼</description>
    <label>INF Passport No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>