force-app/main/default/objects/Name_List__c/fields/INF_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>INF_Ticket_Number__c</fullName>
    <label>INF_Ticket Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>