force-app/main/default/objects/Name_List__c/fields/INF_Title__c.field-meta.xml
<CustomField>
    <fullName>INF_Title__c</fullName>
    <label>INF_Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MSTR</fullName>
            </value>
            <value>
                <fullName>MISS</fullName>
            </value>
            <value>
                <fullName>Mister</fullName>
                <isActive>false</isActive>
                <label>Mister</label>
            </value>
            <value>
                <fullName>Testing</fullName>
                <isActive>false</isActive>
                <label>Testing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>