force-app/main/default/objects/Name_List__c/fields/INF_Visa_Country__c.field-meta.xml
<CustomField>
    <fullName>INF_Visa_Country__c</fullName>
    <description>嬰兒簽證適用國家三碼</description>
    <label>INF Visa Country</label>
    <length>25</length>
    <type>Text</type>
</CustomField>