force-app/main/default/objects/Name_List__c/fields/INF_Visa_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>INF_Visa_Expiry_Date__c</fullName>
    <description>嬰兒簽證到期日</description>
    <label>INF Visa Expiry Date</label>
    <type>Date</type>
</CustomField>