force-app/main/default/objects/Name_List__c/fields/INF_Visa_No__c.field-meta.xml
<CustomField>
    <fullName>INF_Visa_No__c</fullName>
    <description>嬰兒簽證號碼</description>
    <label>INF Visa No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>