force-app/main/default/objects/Name_List__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <label>Surname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>