force-app/main/default/objects/Name_List__c/fields/Meal_Selection_Returning_Only__c.field-meta.xml
<CustomField>
    <fullName>Meal_Selection_Returning_Only__c</fullName>
    <label>Meal Selection(Returning Only)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Meal_Selection</valueSetName>
    </valueSet>
</CustomField>