force-app/main/default/objects/Name_List__c/fields/Meal_Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Meal_Service_Code__c</fullName>
    <label>Meal Service Code</label>
    <type>TextArea</type>
</CustomField>