force-app/main/default/objects/Name_List__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <label>Nationality</label>
    <type>TextArea</type>
</CustomField>