force-app/main/default/objects/Name_List__c/fields/Passenger_Type__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Type__c</fullName>
    <label>Passenger Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>adult</fullName>
            </value>
            <value>
                <fullName>child</fullName>
            </value>
            <value>
                <fullName>false</fullName>
                <isActive>false</isActive>
                <label>false</label>
            </value>
            <value>
                <fullName>null</fullName>
                <isActive>false</isActive>
                <label>null</label>
            </value>
            <value>
                <fullName>r</fullName>
                <isActive>false</isActive>
                <label>r</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>