force-app/main/default/objects/Name_List__c/fields/Passport_Country__c.field-meta.xml
<CustomField>
    <fullName>Passport_Country__c</fullName>
    <description>護照旅客國籍三碼</description>
    <label>Passport Country</label>
    <length>3</length>
    <type>Text</type>
</CustomField>