force-app/main/default/objects/Name_List__c/fields/Passport_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Passport_Expiry_Date__c</fullName>
    <description>護照到期日</description>
    <label>Passport Expiry Date</label>
    <type>Date</type>
</CustomField>