force-app/main/default/objects/Name_List__c/fields/Passport_Issue_Country__c.field-meta.xml
<CustomField>
    <fullName>Passport_Issue_Country__c</fullName>
    <description>護照發照國家三碼</description>
    <label>Passport Issue Country</label>
    <length>3</length>
    <type>Text</type>
</CustomField>