force-app/main/default/objects/Name_List__c/fields/Passport_No__c.field-meta.xml
<CustomField>
    <fullName>Passport_No__c</fullName>
    <description>護照號碼</description>
    <label>Passport No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>