force-app/main/default/objects/Name_List__c/fields/Primary_Document_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Primary_Document_Expiry_Date__c</fullName>
    <label>Primary Document Expiry Date</label>
    <type>Date</type>
</CustomField>