force-app/main/default/objects/Name_List__c/fields/Primary_Document_Issue_Country__c.field-meta.xml
<CustomField>
    <fullName>Primary_Document_Issue_Country__c</fullName>
    <label>Primary Document Issue Country</label>
    <type>TextArea</type>
</CustomField>