force-app/main/default/objects/Name_List__c/fields/Primary_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Document_Number__c</fullName>
    <label>Primary Document #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>