force-app/main/default/objects/Name_List__c/fields/Primary_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Document_Type__c</fullName>
    <label>Primary Document Type</label>
    <type>TextArea</type>
</CustomField>