force-app/main/default/objects/Name_List__c/fields/Refund_Submission__c.field-meta.xml
<CustomField>
    <fullName>Refund_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refund Submission</label>
    <type>Checkbox</type>
</CustomField>