force-app/main/default/objects/Name_List__c/fields/Refund_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Refund_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refund Submitted</label>
    <type>Checkbox</type>
</CustomField>