force-app/main/default/objects/Name_List__c/fields/Seat_Allocation_and_Ticketing__c.field-meta.xml
<CustomField>
    <fullName>Seat_Allocation_and_Ticketing__c</fullName>
    <label>Seat Allocation and Ticketing</label>
    <referenceTo>Seat_Allocation_and_Ticketing__c</referenceTo>
    <relationshipLabel>Name Lists</relationshipLabel>
    <relationshipName>Name_Lists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>