force-app/main/default/objects/Name_List__c/fields/Secondary_Document_Expire_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Document_Expire_Date_c__c</fullName>
    <label>Secondary Document Expire Date</label>
    <type>Date</type>
</CustomField>