force-app/main/default/objects/Name_List__c/fields/Secondary_Document_Issue_Country__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Document_Issue_Country__c</fullName>
    <label>Secondary Document Issue Country</label>
    <type>TextArea</type>
</CustomField>