force-app/main/default/objects/Name_List__c/fields/Secondary_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Document_Number__c</fullName>
    <label>Secondary Document Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>