force-app/main/default/objects/Name_List__c/fields/Secondary_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Document_Type__c</fullName>
    <label>Secondary Document Type</label>
    <type>TextArea</type>
</CustomField>