force-app/main/default/objects/Name_List__c/fields/Special_Service_Departing__c.field-meta.xml
<CustomField>
    <fullName>Special_Service_Departing__c</fullName>
    <label>Special Service(Departing)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Special_Service</valueSetName>
    </valueSet>
</CustomField>