force-app/main/default/objects/Name_List__c/fields/Special_Service_Description__c.field-meta.xml
<CustomField>
    <fullName>Special_Service_Description__c</fullName>
    <label>Special Service Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>