force-app/main/default/objects/Name_List__c/fields/Special_Service_Status_Returning__c.field-meta.xml
<CustomField>
    <fullName>Special_Service_Status_Returning__c</fullName>
    <label>Special Service Status(Returning)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>