force-app/main/default/objects/Name_List__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MR</fullName>
            </value>
            <value>
                <fullName>MRS</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>MSTR</fullName>
            </value>
            <value>
                <fullName>MISS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>