force-app/main/default/objects/Name_List__c/fields/Visa_Country__c.field-meta.xml
<CustomField>
    <fullName>Visa_Country__c</fullName>
    <description>簽證適用國家三碼</description>
    <label>Visa Country</label>
    <length>25</length>
    <type>Text</type>
</CustomField>