force-app/main/default/objects/Name_List__c/fields/Visa_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Visa_Expiry_Date__c</fullName>
    <description>簽證到期日</description>
    <label>Visa Expiry Date</label>
    <type>Date</type>
</CustomField>