force-app/main/default/objects/Name_List__c/fields/visa_No__c.field-meta.xml
<CustomField>
    <fullName>visa_No__c</fullName>
    <description>簽證號碼</description>
    <label>visa No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>