force-app/main/default/objects/Name_List__c/recordTypes/Name_List_for_Travel_Agent.recordType-meta.xml
<RecordType>
    <fullName>Name_List_for_Travel_Agent</fullName>
    <active>true</active>
    <description>for record use only</description>
    <label>Name List for Travel Agent</label>
</RecordType>