force-app/main/default/objects/Name_List__c/validationRules/Check_Date_of_Birth.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Date_of_Birth</fullName>
    <active>false</active>
    <description>Child and Infant need to fill in Date of Birth</description>
    <errorConditionFormula>OR(
  AND(
  text(INF_Passenger_Type__c)=&quot;infant&quot;,
  text(INF_Date_of_Birth__c)=&quot;&quot;
  ),
  AND(
  text(Passenger_Type__c)=&quot;child&quot;,
  text(Date_of_Birth__c)=&quot;&quot;
  )
)</errorConditionFormula>
    <errorMessage>小孩或嬰兒需填寫生日</errorMessage>
</ValidationRule>