force-app/main/default/objects/Name_List__c/validationRules/Check_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Required_Fields</fullName>
    <active>false</active>
    <description>last name/first name/title/Passenger Type are required.</description>
    <errorConditionFormula>OR(
	OR(
	IF(text(Passenger_Type__c)!=&quot;&quot;,
	  OR(
	    Last_Name__c=&quot;&quot;,
	    First_Name__c=&quot;&quot;,
            text(Title__c)=&quot;&quot;
            ),
            false
	  )
	  ),
	IF(text(INF_Passenger_Type__c)!=&quot;&quot;,
	  OR(
	    INF_Last_Name__c=&quot;&quot;,
	    INF_First_Name__c=&quot;&quot;,
            text(INF_Title__c)=&quot;&quot;
            ),
            false
	  ),
	IF(text(Passenger_Type__c)=&quot;&quot;,
	  OR(
	    text(Title__c)!=&quot;&quot;,
	    Last_Name__c!=&quot;&quot;,
	    First_Name__c!=&quot;&quot;,
        text(Date_of_Birth__c)!=&quot;&quot;,
		text(Meal_Selection_All_Sector__c)!=&quot;&quot;,
		text(Meal_Selection_Departing_Only__c)!=&quot;&quot;,
		text(Meal_Selection_Returning_Only__c)!=&quot;&quot;,
		text(Special_Service_Departing__c)!=&quot;&quot;,
		text(Special_Service_Returning__c)!=&quot;&quot;,
		Special_Service_Description__c!=&quot;&quot;
		),
        false
	  ),
	IF(text(INF_Passenger_Type__c)=&quot;&quot;,
	  OR(
	    text(INF_Title__c)!=&quot;&quot;,
	    INF_Last_Name__c!=&quot;&quot;,
	    INF_First_Name__c!=&quot;&quot;,
        text(INF_Date_of_Birth__c)!=&quot;&quot;,
		text(INF_Meal_Selection_All_Sector__c)!=&quot;&quot;,
		text(INF_Meal_Selection_Departing_Only__c)!=&quot;&quot;,
		text(INF_Meal_Selection_Returning_Only__c)!=&quot;&quot;
		),
        false
	  )
  )</errorConditionFormula>
    <errorMessage>請填寫乘客資訊或嬰兒資訊，包含乘客類型、稱謂、姓氏、名字、生日(小孩或嬰兒才需要)</errorMessage>
</ValidationRule>